# web_wallet

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
apps/wallet-extension/: full.html  index.html  manifest.ts  package.json  tsconfig.json  vite.config.ts
apps/wallet-extension/src/: background.ts
apps/wallet-extension/src/full/: main.tsx
apps/wallet-extension/src/popup/: main.tsx  popupApp.tsx  styles.css
apps/wallet-extension/src/ui/: CatalystLogo.tsx
apps/wallet-web/: index.html  package.json  vite.config.ts
apps/wallet-web/src/: main.tsx
apps/wallet-web/src/ui/: App.tsx  CatalystLogo.tsx  styles.css
docs/: catalyst-wallet-v1-derivation.md
tools/rust-ref/: Cargo.toml
tools/rust-ref/src/: main.rs
